cert-mismatch/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-mismatch
  annotations:
    argocd.argoproj.io/sync-wave: "0"
